--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Weird Viral News</title>
+  <meta charset="utf-8">
+  <title>WeirdViralNews Documentation</title>
+  <style>
+    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 2rem; line-height: 1.5;}
+    header { text-align: center; margin-bottom: 2rem; }
+    nav a { margin-right: 1rem; }
+  </style>
 </head>
 <body>
-  <h1>Weird Viral News</h1>
-  <p>Thanks for visiting our official site. We share unbelievable, hilarious, and trending viral news stories from across the internet.</p>
+  <header>
+    <h1>WeirdViralNews Developer Docs</h1>
+    <p>Automated video creation & posting engine</p>
+    <nav>
+      <a href="/terms.html">Terms of Service</a>
+      <a href="/privacy.html">Privacy Policy</a>
+    </nav>
+  </header>
+  <section>
+    <h2>About</h2>
+    <p>This site hosts the legal boilerplate for the WeirdViralNews auto-uploader, including our Terms of Service and Privacy Policy.</p>
+  </section>
 </body>
 </html>
