--- a/privacy.html
+++ b/privacy.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Privacy Policy</title>
+  <meta charset="utf-8">
+  <title>Privacy Policy – WeirdViralNews Uploader</title>
+  <style> body{font-family:sans-serif;max-width:800px;margin:auto;padding:2rem;} </style>
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p>We respect your privacy. This site does not collect, store, or share any personal data. Our videos and services use platform APIs to publish content only with authorized permissions.</p>
+  <p><strong>Last updated:</strong> June 21, 2025</p>
+
+  <h2>1. Information We Collect</h2>
+  <ul>
+    <li><strong>Usage data:</strong> logs of API calls, errors, performance metrics.</li>
+    <li><strong>Content data:</strong> clips and captions you supply.</li>
+  </ul>
+
+  <h2>2. How We Use Data</h2>
+  <p>To generate, remix, and publish video Content; to monitor performance; to improve the Service.</p>
+
+  <h2>3. Data Sharing & Disclosure</h2>
+  <p>We do not sell personal data. We may share anonymized metrics with third‐party analytics services.</p>
+
+  <h2>4. Data Retention</h2>
+  <p>Usage logs are retained for up to 90 days; Content you supply is kept until you delete it or close your account.</p>
+
+  <h2>5. Security</h2>
+  <p>We use industry-standard measures to protect your data but cannot guarantee absolute security.</p>
+
+  <h2>6. Changes to Policy</h2>
+  <p>We may update this Policy. Continued use after changes means you accept them.</p>
+
+  <h2>7. Contact</h2>
+  <p>Questions or requests: <a href="mailto:weirdviralnews87@gmail.com">weirdviralnews87@gmail.com</a>. </p>
 </body>
 </html>
